# amidakuji

./: .editorconfig  .gitignore  Dockerfile  README.md  main.py  migrate_to_uv_lock.md  pyproject.toml  requirements-dev.txt  requirements.txt  verify.py
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
amidakuji_generator/: __init__.py  core.py
scripts/: apply_editorconfig.py  check_lockfile.py
tests/: test_core.py
